# spherical_functions

./: .binstar.yml  .conda_deploy.sh  .coveragerc  .gitignore  .meta_yaml_replacer.py  .travis.yml  ComparingConventions.md  ComparingMathematica.md  Delta.npy  EulerAngles.md  LICENSE  MANIFEST.in  PolynomialsWithFactorials.md  QuaternionsAndRotations.md  README.md  README.txt  SWSH.py  SWSHs.md  Wigner3j.py  WignerD.py  WignerDDerivation.md  WignerDMatrices.md  WignerDRecursion.py  Wigner_coefficients.npy  __init__.py  _config.yml  _generate_coefficients.py  _version.py  binomial_coefficients.npy  conftest.py  index.html  index.md  ladder_operator_coefficients.npy  linear_momentum.py  linear_momentum.py~  meta.yaml  mode_conversions.py  multiplication.py  params.json  pipify.sh  (+17 more)
.github/workflows/: build.yml
Notes/: conventions.ipynb
_layouts/: default.html
_plugins/: markdown.rb
javascripts/: scale.fix.js
spherical_functions/: __init__.py  mode_conversions.py  modes.py  multiplication.py
spherical_functions/SWSH/: __init__.py
spherical_functions/SWSH_grid/: __init__.py  algebra.py  ufuncs.py  utilities.py
spherical_functions/SWSH_grids/: __init__.py  algebra.py  ufuncs.py  utilities.py
spherical_functions/SWSH_modes/: __init__.py  algebra.py  derivatives.py  ufuncs.py  utilities.py
spherical_functions/Wigner3j/: __init__.py
spherical_functions/WignerD/: WignerDRecursion.py  __init__.py
spherical_functions/recursions/: __init__.py  associated_legendre_functions.py  complex_powers.py  wigner3j.py  wignerH.py
stylesheets/: styles.css
tests/: conftest.py  test_SWSHs.py  test_Wigner3j.py  test_WignerD.py  test_mode_conversions.py  test_modes.py  test_multiplication.py  test_recursion.py  test_recursions.py  test_spherical_functions.py  time_LM_ranges.py  time_Wigner_D_elements.py  time_Wigner_D_matrices.py
