[tool.poetry]
name = "spherical-functions"
description = "Python/numba implementation of Wigner D Matrices, spin-weighted spherical harmonics, and associated functions"
version = "2022.4.3"
readme = "README.md"
license = "MIT"
authors = ["Michael Boyle <mob22@cornell.edu>"]
homepage = "https://github.com/moble/spherical_functions"
packages = [{include = "spherical_functions" }]
include = ["spherical_functions/*.npy"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.20"
scipy = "^1.0"
numba = ">=0.55"
numpy-quaternion = ">=2022"
spinsfast = ">=2022"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = ">=2.10.1"
black = ">=22.1"
sympy = ">=1.10"
line-profiler = ">=3.5.0"

[tool.black]
line-length = 120
target-version = ['py38','py39','py310']

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".* build dist *.egg-info install ENV gh-pages __pycache__"
junit_family="xunit2"
addopts = "-v --tb=short --doctest-glob=''"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
